0.79 2021-08-17
- update now that PDL's ->sum etc return ndarrays, not Perl scalars

0.78 2021-04-24
- update build to avoid false positives for working CDF library

0.77 2021-04-20
- moved the GSL CDF functions over to main PDL - thanks @maggiexyz!

0.76 2020-12-19
- spelling fixes - thanks @sebastic

0.75 2016-05-30
  - no change from 0.74_1

0.74_1 2016-05-28
  - build updates

0.74 Fri Dec 4 22:09:47 2015 -0500
  - no change from 0.73_1

0.73_1 Sun Nov 29 10:15:44 2015 -0500
  - Improved support for 64bit indexing (kmx)
  - PDL::GSL::CDF facelift (kmx)
  - kmeans test workaround (kmx)
  - messages for various tests (kaoru)
  - doc-building improvements

0.72 Mon Aug 31 18:54:08 BST 2015
  - changelog test in CI
  - remove erroneous dep on PDL::GSL::CDF

0.71 Sat Aug 29 18:54:08 BST 2015
  - Beef up CI with optional requirements spelled out and apt installed
  - kmeans and kmeans_bad tests retry, marked TODO as fails on clang
  - add badges to README and rename to Markdown file
  - Print out kmeans_bad test for debugging.
  - Metadata fix
  - Add manifest test, remove META.yml from main MANIFEST

0.70    18/08/2015
  - Updated to work with PDL-2.008. More tests for anova.

0.6.5   11/03/2013
  - Updated to work with PDL-2.007. Real 64bit support yet to come.

0.6.4   09/05/2013
  - Make 'cpan PDL::Stats' work.

0.6.3   05/05/2013
  - binomial_test() bug fix -- [rt.cpan.org #82725]
  - pmf_poisson() updated to handle large input values thanks to David Mertens.
  - ols() bad value support update thanks to Ingo Schmid.
  - anova(), anova_rptd() bad value support update.

0.6.2   04/29/2012
  - Windows pdldoc database install fix.

0.6.1   04/24/2012
  - Bails out of installation if running under perl 5.15.0 to 5.15.8 but allows --force to attempt a build regardless.

0.6.0   04/08/2012
  - Added group_by() method in Basic.pm.
  - Updates pdl doc database.
  - Bails out of installation if running under perl 5.14.0 to 5.15.8.